fix(bankstatement): collapse closed items into single item
ref. #PB-583

--- a/src/app/components/bank-reconciliation/bank-statement-entries/bank-statement-entries.sass
+++ b/src/app/components/bank-reconciliation/bank-statement-entries/bank-statement-entries.sass
@@ -1,3 +1,3 @@
 .closed
-    opacity: .3
+    opacity: .5
     cursor: default
